2006-10-30  Tim-Philipp Müller  <tim at centricular dot net>

	* src/conn-http.c: (gnet_conn_http_append_to_buf),
	(gnet_conn_http_new), (gnet_conn_http_set_user_agent):
	  Append comment with GNet version to any custom user agent
	  strings; minor indentation fix in _append_to_buf().

2006-10-30  Tim-Philipp Müller  <tim at centricular dot net>

	Based on patch by: Samuel Cormier-Iijima  <sciyoshi@gmail.com>

	* NEWS:
	* doc/gnet-sections.txt:
	* src/conn-http.c: (gnet_conn_http_set_uri_internal),
	(gnet_conn_http_set_uri), (gnet_conn_http_set_escaped_uri):
	* src/conn-http.h:
	  API: added gnet_conn_http_set_escaped_uri().

2006-10-07  Tim-Philipp Müller  <tim at centricular dot net>

	* src/base64.c: (gnet_base64_encode), (gnet_base64_decode):
	  Add guards for NULL input. A 0-length input to gnet_base64_encode()
	  should return an empty string and not NULL. In the case of
	  gnet_base64_decode(), use strlen(src) for all non-positive values
	  of srclen and not just 0, since glib usually uses -1 for this
	  (0-sized input should really just have returned a 0-sized output
	  buffer, but we can't change that now for backwards compatibility
	  reasons).

2006-09-27  Tim-Philipp Müller  <tim at centricular dot net>

	* README:
	  Update (no more glib-1.2).

2006-09-13  Tim-Philipp Müller  <tim at centricular dot net>

	* tests/.cvsignore:
	* tests/Makefile.am:
	* tests/tcp_test.c:
	  Add unit test for bug #305854.

	* examples/sdr.c: (main):
	  Add some refs/unrefs to test the derived nature of GMcastSocket and
	  the run-time 'type checks'.

2006-09-13  Tim-Philipp Müller  <tim at centricular dot net>

	* src/gnet-private.h:
	* src/inetaddr.c: (gnet_inetaddr_new_async):
	* src/tcp.c: (gnet_tcp_socket_connect_async),
	(gnet_tcp_socket_connect_inetaddr_cb):
	  Move more private and only locally used structs into the
	  appropriate .c files; make some internal functions static;
	  use proper AsyncID types for such IDs; don't leak mutex. 
